<?xml version="1.0" encoding="utf-8"?>
<LinearLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:layout_gravity="center_vertical"
    android:orientation="vertical"
    android:fillViewport="true">

    <include layout="@layout/toolbar" />

    <ScrollView
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:layout_gravity="center_vertical"
        android:orientation="vertical"
        android:fillViewport="true">

        <LinearLayout
            android:layout_width="fill_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical"
            android:padding="10dp">

        <ImageView
            android:layout_width="80dp"
            android:layout_height="80dp"
            android:layout_margin="10dp"
            android:layout_marginBottom="5dp"
            android:layout_marginTop="5dp"
            android:layout_gravity="center_horizontal"
            android:src="@drawable/exp_logo"/>

        <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_margin="10dp"
            android:layout_marginBottom="5dp"
            android:layout_marginTop="5dp"
            android:gravity="center_horizontal"
            android:text="@string/hello" />

        <Button
            android:layout_width="fill_parent"
            android:layout_height="wrap_content"
            android:text="@string/page_views_button"
            android:onClick="onPageViewsClicked"
            android:layout_marginTop="5dp"
            android:layout_marginBottom="5dp"
            style="@style/AppTheme.Button"/>


        <Button
            android:layout_width="fill_parent"
            android:layout_height="wrap_content"
            android:text="@string/launch_count_button"
            android:onClick="onLaunchCountClicked"
            android:layout_marginTop="5dp"
            android:layout_marginBottom="5dp"
            style="@style/AppTheme.Button"/>

        <Button
            android:layout_width="fill_parent"
            android:layout_height="wrap_content"
            android:text="@string/property_button"
            android:onClick="onPropertyClicked"
            android:layout_marginTop="5dp"
            android:layout_marginBottom="5dp"
            style="@style/AppTheme.Button"/>

        <Button
            android:layout_width="fill_parent"
            android:layout_height="wrap_content"
            android:text="@string/manual_launch_button"
            android:onClick="onManualSurveyClicked"
            android:layout_marginTop="5dp"
            android:layout_marginBottom="5dp"
            style="@style/AppTheme.Button"/>

        <Button
            android:layout_width="fill_parent"
            android:layout_height="wrap_content"
            android:text="@string/reset_counters"
            android:onClick="resetCounters"
            android:layout_marginTop="5dp"
            android:layout_marginBottom="5dp"
            style="@style/AppTheme.Button"/>

        <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_margin="10dp"
            android:layout_marginBottom="5dp"
            android:layout_marginTop="5dp"
            android:gravity="center_horizontal"
            android:text="@string/reset_button_desc" />

        </LinearLayout>
    </ScrollView>

</LinearLayout>